--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,20 @@
+html {
+  width: 100vw;
+  min-height: 100vh;
+  overflow: scroll;
+  background-color: #d7d7d7;
+  font-size: 62.5%;
+}
 h1 {
   color: white;
   background-color: black;
+}
+.banner {
+  background: url('https://unsplash.com/photos/8lnbXtxFGZw');
+  background-size: cover;
+  padding: 4rem 2rem;
+  /* Grid */
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
 }
