--- a/src/styles.css
+++ b/src/styles.css
@@ -16,17 +16,20 @@ body {
   width: 100vw;
   min-height: 100vh;
   overflow: scroll;
-  background-color: #d7d7d7;
+  background-color: #d3d3d3;
   font-size: 62.5%;
   font-family: "Roboto", helvetica, sans-serif;
   color: #000;
+  overflow: hidden;
 }
 
 h1 {
-  color: white;
-  background-color: black;
+  color: f5f5f5;
+  background-color: #2E8B57;
   font-family: "Roboto", san-serif;
   font-weight: 900; /* Necessary? */
+  color: #f5f5f5;
+  padding: 0.5rem 0.7rem;
 }
 
 .app {
@@ -76,7 +79,7 @@ h1 {
 }
 
 .txn-row:nth-of-type(even) {
-  background-color: #f2f2f2;
+  background-color: #f5f5f5;
 }
 
 .txn-row:nth-of-type(odd) {
@@ -84,7 +87,7 @@ h1 {
 }
 
 .txn-row:hover {
-  color: #00a07b;
+  color: #2E8B57;
 }
 
 .txn-data {
@@ -103,7 +106,7 @@ h1 {
 
 .category-list {
   /*adjusts category list under Add Categories*/
-  background-color: #00a07b;
+  background-color: #2E8B57;
   color: white;
   margin-top: 50px;
 }
@@ -143,24 +146,25 @@ input {
 }
 
 input:focus {
-  border-bottom: 2px solid #00a07b;
+  border-bottom: 2px solid #2E8B57;
 }
 
 button {
   float: right;
   padding: 8px 12px;
   margin: 20px 0px 20px 0px;
-  border: 2px solid #00a07b;
+  border: 2px solid #2E8B57;
   background: 0;
   color: black;
   cursor: pointer;
   transition: all 0.3s;
+  border-radius: 0.3rem;
 }
 
 button:hover {
-  background: #00a07b;
-  color: #fff;
-  border: 2px solid #00a07b;
+  background: #2E8B57;
+  color: #f5f5f5;
+  border: 2px solid #2E8B57;
 }
 
 .category-form {
