--- a/src/styles.css
+++ b/src/styles.css
@@ -7,30 +7,20 @@ html {
   overflow-x: hidden;
   background-color: #d7d7d7;
   font-size: 62.5%;
-  font-family: 'Roboto', helvetica, sans-serif;
+  font-family: "Roboto", helvetica, sans-serif;
 }
-
 
 body {
   max-width: 100vw;
   min-height: 100vh;
-<<<<<<< HEAD
-  overflow: scroll;
-  background-color: #d3d3d3;
-  font-size: 62.5%;
-  font-family: "Roboto", helvetica, sans-serif;
-  color: #000;
-  overflow: hidden;
-=======
   overflow: hidden;
   color: #000;
   overflow-x: hidden;
->>>>>>> a48344f992d8e331ab3a2a1e3dc209106f8a0e11
 }
 
 h1 {
   color: f5f5f5;
-  background-color: #2E8B57;
+  background-color: #2e8b57;
   font-family: "Roboto", san-serif;
   font-weight: 900; /* Necessary? */
   color: #f5f5f5;
@@ -92,7 +82,7 @@ h1 {
 }
 
 .txn-row:hover {
-  color: #2E8B57;
+  color: #2e8b57;
 }
 
 .txn-data {
@@ -111,7 +101,7 @@ h1 {
 
 .category-list {
   /*adjusts category list under Add Categories*/
-  background-color: #2E8B57;
+  background-color: #2e8b57;
   color: white;
   margin-top: 50px;
 }
@@ -151,14 +141,14 @@ input {
 }
 
 input:focus {
-  border-bottom: 2px solid #2E8B57;
+  border-bottom: 2px solid #2e8b57;
 }
 
 button {
   float: right;
   padding: 8px 12px;
   margin: 20px 0px 20px 0px;
-  border: 2px solid #2E8B57;
+  border: 2px solid #2e8b57;
   background: 0;
   color: black;
   cursor: pointer;
@@ -167,9 +157,9 @@ button {
 }
 
 button:hover {
-  background: #2E8B57;
+  background: #2e8b57;
   color: #f5f5f5;
-  border: 2px solid #2E8B57;
+  border: 2px solid #2e8b57;
 }
 
 .category-form {
