--- a/src/styles.css
+++ b/src/styles.css
@@ -1,69 +1,92 @@
 /* @import url("https://fonts.googleapis.com/css?family=Montserrat"); */
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 
+* {
+  box-sizing: border-box;
+}
+
 html {
-  max-width: 100vw;
+  width: 100%;
   min-height: 100vh;
-  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
   background-color: #d7d7d7;
   font-size: 62.5%;
-  font-family: "Roboto", helvetica, sans-serif;
+  font-family: 'Roboto', helvetica, sans-serif;
 }
 
 body {
-  max-width: 100vw;
-  min-height: 100vh;
-  overflow: hidden;
+  width: 100%;
+  max-width: 100%;
+  min-height: 100%;
   color: #000;
-  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+div {
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
   color: f5f5f5;
-  background-color: #2e8b57;
+  background-color: #2E8B57;
   font-family: "Roboto", san-serif;
-  font-weight: 700; /* Necessary? */
+  font-weight: 900; /* Necessary? */
   color: #f5f5f5;
   padding: 0.5rem 0.7rem;
 }
 
+.app {
+  width: 100%;
+  min-height: 100vh;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+.react-container {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  /* GRID */
+  display: grid;
+  justify-items: center;
+}
+
+.show {
+  background-color: #999;
+  border: 0.1rem solid black;
+  border-radius: 0.3rem;
+  margin: 1rem 0;
+  padding: 1rem 1.7rem;
+}
+
 .header {
   background: url("https://unsplash.com/photos/8lnbXtxFGZw");
-
+  width: 100%;
 }
-
-.app {
-  /*adjusts component position and relationship next to each other*/
-  display: flex;
-  flex-flow: row;
+.viz {
+  width: 100%;
+  padding: 1rem;
 }
-
 .main {
-  order: 1;
-  flex-grow: 4;
-  flex-wrap: wrap;
-  max-width: 80%;
+  width: 100%;
+}
+.sidebar {
+  width: 100%;
 }
 
-.sidebar {
-  order: 2;
-  flex-grow: 1;
-  flex-wrap: wrap;
-  max-width: 20%;
+.widget {
+  width: 100%;
+  margin: 0 2rem;
 }
 
 .txn {
   /*adjusts position of transaction table*/
-  width: 95%;
-  margin: 20px auto;
-}
-
-.category {
-  /*NOTE: Add Transactions component currently has this class; add a different class or id to
-  adjust the Add Transactions component separately from the Add Categories component*/
-  /*further adjusts add categories*/
-  width: 90%;
-  margin: 20px auto;
+  width: 80%;
+  margin: 20px;
 }
 
 .txn-table {
@@ -101,7 +124,7 @@ h1 {
 }
 
 .txn-row:hover {
-  color: #2e8b57;
+  color: #2E8B57;
 }
 
 .txn-data {
@@ -120,7 +143,7 @@ h1 {
 
 .category-list {
   /*adjusts category list under Add Categories*/
-  background-color: #2e8b57;
+  background-color: #2E8B57;
   color: white;
   margin-top: 50px;
 }
@@ -154,19 +177,19 @@ input {
   outline: none;
   resize: none;
   border: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   transition: all 0.3s;
   border-bottom: 2px solid #d0d0d0;
 }
 
 input:focus {
-  border-bottom: 2px solid #2e8b57;
+  border-bottom: 2px solid #2E8B57;
 }
 
 button {
-  /* float: right; */
+  float: right;
   padding: 8px 12px;
-  margin: 20px 0px;
+  margin: 20px 0px 20px 0px;
   border: 2px solid #2E8B57;
   background: 0;
   color: black;
@@ -176,9 +199,9 @@ button {
 }
 
 button:hover {
-  background: #2e8b57;
+  background: #2E8B57;
   color: #f5f5f5;
-  border: 2px solid #2e8b57;
+  border: 2px solid #2E8B57;
 }
 
 .category-form {
@@ -187,6 +210,50 @@ button:hover {
   flex-flow: column;
 }
 
-/* * {
-  border: 0.1rem dashed darkblue !important;
-} */
+/* RESPONSIVE SIZING */
+@media (min-width: 640px) {
+  .react-container {
+    /* GRID */
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    grid-template-rows: min-content min-content 1fr;
+    justify-items: center;
+    align-items: start;
+  }
+  .show {
+    background-color: #999;
+    border: 0.1rem solid black;
+    border-radius: 0.3rem;
+    padding: 1rem 1.7rem;
+  }
+  .header {
+    padding: 0 2rem;
+    grid-row: 1;
+    grid-column: 1/3;
+    width: 100%;
+    padding: 1rem;
+  }
+  .viz {
+    grid-row: 2;
+    grid-column: 1/3;
+    width: 100%;
+    padding: 1rem;
+  }
+  .main {
+    grid-row: 3;
+    grid-column: 1/2;
+    width: 100%;
+    padding: 1rem;
+  }
+  .sidebar {
+    grid-row: 3;
+    grid-column: 2/3;
+    width: 100%;
+    padding: 1rem;
+  }
+}
+
+/* ADMIN */
+.show {
+  border: 1px dotted red;
+}
