--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ html {
   min-height: 100vh;
   margin: 0;
   padding: 0;
-  background-color: #d7d7d7;
+  background-color: #f5f5f5;
   font-size: 62.5%;
   font-family: 'Roboto', helvetica, sans-serif;
 }
@@ -39,11 +39,12 @@ h1 {
   padding: 0.5rem 0.7rem;
 }
 
-.app {
+#app {
   width: 100%;
+  max-width: 100vw;
   min-height: 100vh;
   margin: 0 auto;
-  padding: 0 1rem;
+  padding: 0;
 }
 
 .react-container {
@@ -56,7 +57,7 @@ h1 {
 }
 
 .show {
-  background-color: #999;
+  background-color: #d0d0d0;
   border: 0.1rem solid black;
   border-radius: 0.3rem;
   margin: 1rem 0;
@@ -64,37 +65,46 @@ h1 {
 }
 
 .header {
-  background: url("https://unsplash.com/photos/8lnbXtxFGZw");
+  /* background: url("https://unsplash.com/photos/8lnbXtxFGZw"); */
   width: 100%;
+  margin: 1rem 0;
+  padding: 1rem 1.7rem;
 }
 .viz {
   width: 100%;
   padding: 1rem;
+  margin: 1rem 0;
+  padding: 1rem 1.7rem;
 }
 .main {
   width: 100%;
+  margin: 0;
+  padding: 2rem;
 }
 .sidebar {
   width: 100%;
+  margin: 0;
+  padding: 2rem;
 }
 
-.widget {
+.content {
   width: 100%;
-  margin: 0 2rem;
+  margin: 1rem 0;
 }
 
 .txn {
   /*adjusts position of transaction table*/
-  width: 80%;
-  margin: 20px;
+  width: 100%;
+  padding: 0;
 }
 
 .txn-table {
   /*formats various aspects of transaction table*/
   display: flex;
   flex-flow: column nowrap;
+  /* justify-items: center; */
   font-size: 0.8rem;
-  margin: 0.5rem;
+  margin: 0 auto;
   line-height: 1.5;
   flex: 1 1 auto;
 }
@@ -213,18 +223,14 @@ button:hover {
 /* RESPONSIVE SIZING */
 @media (min-width: 640px) {
   .react-container {
+    margin: 0;
+    padding: 0 1rem;
     /* GRID */
     display: grid;
     grid-template-columns: 4fr 1fr;
     grid-template-rows: min-content min-content 1fr;
     justify-items: center;
     align-items: start;
-  }
-  .show {
-    background-color: #999;
-    border: 0.1rem solid black;
-    border-radius: 0.3rem;
-    padding: 1rem 1.7rem;
   }
   .header {
     padding: 0 2rem;
@@ -237,6 +243,7 @@ button:hover {
     grid-row: 2;
     grid-column: 1/3;
     width: 100%;
+    margin: 0;
     padding: 1rem;
   }
   .main {
@@ -249,11 +256,12 @@ button:hover {
     grid-row: 3;
     grid-column: 2/3;
     width: 100%;
+    margin: 0;
     padding: 1rem;
   }
 }
 
 /* ADMIN */
-.show {
+* {
   border: 1px dotted red;
 }
