--- a/src/styles.css
+++ b/src/styles.css
@@ -158,6 +158,20 @@ input {
   border-bottom: 2px solid #d0d0d0;
 }
 
+.input-data {
+  /*adjusts input fields*/
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  background: none;
+  outline: none;
+  resize: none;
+  border: 0;
+  font-family: "Montserrat", sans-serif;
+  transition: all 0.3s;
+  border-bottom: 2px solid #d0d0d0;
+}
+
 input:focus {
   border-bottom: 2px solid #2e8b57;
 }
