--- a/src/styles.css
+++ b/src/styles.css
@@ -38,10 +38,13 @@ h1 {
   color: #f5f5f5;
   padding: 0.5rem 0.7rem;
 }
+h3 {
+  font-size: 1.8rem;
+}
 
 #app {
   width: 100%;
-  max-width: 100vw;
+  max-width: 102.4rem;
   min-height: 100vh;
   margin: 0 auto;
   padding: 0;
@@ -75,6 +78,15 @@ h1 {
   margin: 1rem 0;
   padding: 1rem 1.7rem;
 }
+.chart {
+  display: grid;
+}
+/* .reference {
+  margin: 0 auto;
+} */
+/* svg {
+  align-item: center;
+} */
 .main {
   width: 100%;
   margin: 0;
@@ -116,6 +128,7 @@ h1 {
 
 .txn-header > .txn-data {
   white-space: normal;
+  font-size: 1.4rem;
 }
 
 .txn-row {
@@ -129,7 +142,7 @@ h1 {
 }
 
 .txn-row:nth-of-type(odd) {
-  background-color: #ffffff;
+  background-color: #e5e5e5;
 }
 
 .txn-row:hover {
@@ -148,6 +161,7 @@ h1 {
   min-width: 0px;
   white-space: nowrap;
   border-bottom: 1px solid #d0d0d0;
+  font-size: 1.2rem;
 }
 
 .category-list {
@@ -182,7 +196,7 @@ input {
   width: 100%;
   padding: 10px;
   box-sizing: border-box;
-  background: none;
+  background: #f5f5f5;
   outline: none;
   resize: none;
   border: 0;
